Added new endpoint for collecting distinct owners from datatable. Modified swagger accordingly.
